# db-equitable-development-tool

./: .gitignore  2012_5YearEstimates_PUMA_Column.ipynb  README.md  pyproject.toml  requirements.in  requirements.txt  run.sh
.devcontainer/: Dockerfile  devcontainer.json
Notebooks/: 2012_5YearEstimates_PUMA_Column.ipynb
aggregate/: aggregate_PUMS.py  aggregate_PUMS_demographics.py  aggregate_PUMS_economics.py  aggregated_cache_fn.py  aggregation_helpers.py  all_accessors.py  change_in_units.py  clean_aggregated.py  count_PUMS_demographics.py  load_HVS.py  load_PUMS.py  load_aggregated.py  median_PUMS_demographics.py
external_review/: collate_save_census.py  export_DO.sh  external_review_PUMS.py  external_review_collate.py  housing_production.py
ingest/: HVS_conversion.py  HVS_ingestion.py  PUMA_url.py  PUMS_clean.py  PUMS_cleaner.py  PUMS_data.py  PUMS_query_manager.py  PUMS_request.py  __init__.py  download_PUMS.py  ingestion_helpers.py  load_data.py  make_cache_fn.py  metadata.yml  validate_response.py
internal_review/: Access_to_ADA_subway.csv  Access_to_subway_SBS.csv  Access_to_subway_or_SBS.csv  HVS_2017_Borough_crosstab_by_race_False  area_historic_by_puma.csv.csv  area_historic_citywide.csv.csv  set_internal_review_file.py  unit_change_borough.csv  unit_change_citywide.csv  unit_change_puma.csv
notebooks/: 2012_5YearEstimates_PUMA_Column.ipynb  Area_within_Historic_District_Exploratory.ipynb  Housing-NY-Exploratory.ipynb  LEP_Custom_Denom.ipynb  Median_Wages.ipynb  Occupation_Variable_2012_PUMS.ipynb  Rpy2_Fractions_Exploratory.ipynb  (+4 more)
tests/: util.py  (+17 more)
(+396 files in other folders)
