[tool.poetry]
name = "db-equitable-development-tool"
version = "0.1.0"
description = ""
authors = ["Sasha"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
pandas = "^1.3.4"
requests = "^2.26.0"
python-dotenv = "^0.19.1"
rpy2 = "^3.4.5"
openpyxl = "^3.0.9"
geopandas = "^0.10.2"
Rtree = "^0.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
